crates/hpc-core/tests/compile-fail/api_order.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_order.rs
  |
  |     let buf: DeviceBuffer<u32, _> = q.create_buffer_elems(4);
  |                                     ------------------------ here the type of `buf` is inferred to be `DeviceBuffer<'_, '_, u32, hpc_core::buffer::state::Empty>`
...
  |     let _ = q.enqueue_kernel(&k, buf);
  |               --------------     ^^^ expected `DeviceBuffer<'_, '_, _, Ready>`, found `DeviceBuffer<'_, '_, u32, Empty>`
  |               |
  |               arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<'_, '_, _, hpc_core::Ready>`
             found struct `DeviceBuffer<'_, '_, u32, hpc_core::buffer::state::Empty>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn enqueue_kernel<T>(
  |            ^^^^^^^^^^^^^^
